--- a/application/package.json
+++ b/application/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.0.2",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^5.3.2",
     "express-mysql-session": "^2.1.6",
     "express-session": "^1.17.2",
