--- a/application/package.json
+++ b/application/package.json
@@ -18,7 +18,9 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql2": "^2.2.5"
+    "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
+    "sharp": "^0.28.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
